fix: update prettier files
